5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1807_2565.log
== TEST (2019-06-13 09:22:32) 
-- CODE:
ma = array(eval(input("Media do Aluno: ")))
p = array(eval(input("Precenca em Horas: ")))
ch = int(input("Carga Horaria: "))
lol = zeros(3,dtype=int)

for i in range(size(ma)): 
	dd = (75 / 100) * ch
	
	if ma[i] >= 5 and p[i] > dd: 
		lol[0]= lol[0] + 1
	elif ma[i] < 5: 
		lol[1]= lol[1] + 1
	else: 
		lol[2] = lol[2] + 1
print(lol)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ma = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:22:52) 
-- CODE:
from numpy import*
ma = array(eval(input("Media do Aluno: ")))
p = array(eval(input("Precenca em Horas: ")))
ch = int(input("Carga Horaria: "))
lol = zeros(3,dtype=int)

for i in range(size(ma)): 
	dd = (75 / 100) * ch
	
	if ma[i] >= 5 and p[i] > dd: 
		lol[0]= lol[0] + 1
	elif ma[i] < 5: 
		lol[1]= lol[1] + 1
	else: 
		lol[2] = lol[2] + 1
print(lol)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:23:54) 
-- CODE:
from numpy import*
ma = array(eval(input("Media do Aluno: ")))
p = array(eval(input("Precenca em Horas: ")))
ch = int(input("Carga Horaria: "))
lol = zeros(3,dtype=int)

for i in range(size(ma)): 
	dd = (75 // 100) * ch
	
	if ma[i] >= 5 and p[i] > dd: 
		lol[0]= lol[0] + 1
	elif ma[i] < 5: 
		lol[1]= lol[1] + 1
	else: 
		lol[2] = lol[2] + 1
print(lol)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:24:31) 
-- CODE:
from numpy import*
ma = array(eval(input("Media do Aluno: ")))
p = array(eval(input("Precenca em Horas: ")))
ch = int(input("Carga Horaria: "))
lol = zeros(3,dtype=int)

for i in range(size(ma)): 
	dd = (75 / 100) * ch
	
	if ma[i] >= 5 and p[i] >= dd: 
		lol[0]= lol[0] + 1
	elif ma[i] < 5: 
		lol[1]= lol[1] + 1
	else: 
		lol[2] = lol[2] + 1
print(lol)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:25:02) 
-- CODE:
from numpy import*
ma = array(eval(input("Media do Aluno: ")))
p = array(eval(input("Precenca em Horas: ")))
ch = int(input("Carga Horaria: "))
lol = zeros(3,dtype=int)

for i in range(size(ma)): 
	dd = (75 / 100) * ch
	
	if ma[i] >= 5 and p[i] >= dd: 
		lol[0]= lol[0] + 1
	elif ma[i] < 5: 
		lol[1]= lol[1] + 1
	else: 
		lol[2] = lol[2] + 1
print(lol)	
-- EXECUTION TIME:
1.21575
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
